--- a/design-1/datas/css/styles.css
+++ b/design-1/datas/css/styles.css
@@ -4,52 +4,12 @@ body{
 	overflow-x: hidden;
 }
 ul{
-	list-style: none;
-	top: 0;
-	width: 100%;
-	height: 37px;
-}
-ul li{
 	float: left;
-	padding-left: 2em;
-	padding-top: 1em;
-}
-ul li a{
-	text-decoration: none;
-	color: #000;
-	padding: 15px;
+	display: inline-block;
+	position: absolute;
 }
 ul li ul{
-	padding: 0;
-	width: 0;
-	position: absolute;
-	top: 35px;
 	opacity: 0;
-	display: none;
-	height: 0;
-	-webkit-transition: all 0.5s ease;
-	 -moz-transition: all 1.5s ease;
-	  -o-transition: all 1.5s ease;		
-}
-ul li ul li{
-	background: #000;
-	color: #fff;
-	float: none;
-	-webkit-transition: all 0.5s ease; 
-	-moz-transition: all 1.5s ease; 
-	-o-transition: all 1.5s ease;
-}
-ul li ul li a{
-	color: #fff;
-}
-ul li:hover ul{
-	opacity: 1;
-	width: 200px;
-	display: block;
-	-webkit-transition: all 0.5s ease; 
-	-moz-transition: all 1.5s ease; 
-	-o-transition: all 1.5s ease;
-
 }
 /*pillar text....*/
 aside{
@@ -92,9 +52,7 @@ aside section button{
 	background: #fff;
 }
 .icon{
-	font-size: 70px;
-    border-radius: 100%;
-    display: inline-block;
+	font-size: 45px;
 }
 .row div h3 {
     font-size: large;
@@ -133,25 +91,16 @@ aside section button{
 
 }
 /*screen shot content..strs*/
-.box-item{
-	border: 1px solid #ccc;
-	height: 200px;
-	width: 100%;
-	right: 40px;
-	padding-top: 50px;
-	overflow-y: none;
+.blackd{
+	background: #000;
+	bottom: 20px;
 }
-.big-box{
-	height: auto;
-	background: #252525;
-}
-.big-box .b-item img{
-	height: 100%;
-}
-.big-box .screen-shot h3{
+#screentext{
 	color: #fff;
-	font-weight: 500;
-	padding-top: 60px;
+
+}
+.b-item{
+	padding-bottom: 6em; 
 }
 /*end screen shot module*/
 .body-x{
@@ -172,8 +121,4 @@ aside section button{
 	padding-right: 130px;
 	text-align: center;
 	font-weight: 600;
-}
-.blackd{
-	background: #000;
-	bottom: 20px;
 }
